--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/telescope": "^5.3",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-health": "^1.32"
+        "spatie/laravel-health": "^1.32",
+        "ext-zip": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
